NOT-2 - notification service docs and swagger
